----------------------------------------------------------------------
 OmegaT 4.1.4 update 1
----------------------------------------------------------------------
  5 Enhancements
  2 Bug fixes
  0 Localisation update
----------------------------------------------------------------------
4.1.4 update 1 vs 4.1.4

  Implemented requests:

  - Port TagWipe from DGT-OmegaT project as an OmegaT script
  https://sourceforge.net/p/omegat/feature-requests/1384/

  - Clarify XLIFF filter options description
  https://sourceforge.net/p/omegat/feature-requests/1387/

  - Add support for Microsoft neural machine translation
  https://sourceforge.net/p/omegat/feature-requests/1366/

  Other changes:

  - Project > Open Recent Project now remembers up to 10 projects by
default. Existing users should remove the `most_recent_projects_size`
item in the omegat.prefs file to take advantage of this change.

  - Added Project > Open Recent Project > Clear Menu

  Bug fixes:

  - Infinite loop when searching with no keyword
  https://sourceforge.net/p/omegat/bugs/901/

  - Empty regex capture group becomes "null" in replacement
  https://sourceforge.net/p/omegat/bugs/907/

----------------------------------------------------------------------
 OmegaT 4.1.4 (2018-04-02)
----------------------------------------------------------------------
  5 Enhancements
  2 Bug fixes
  6 Localisation updates
----------------------------------------------------------------------
4.1.4 vs 4.1.3 update 2

  Implemented requests:

  - Optionally disable bold style for active segment source
  https://sourceforge.net/p/omegat/feature-requests/952/

  - Replacement with regex capture groups and case manipulation
  https://sourceforge.net/p/omegat/feature-requests/953/

  - Update git submodules when loading an existing project
  https://sourceforge.net/p/omegat/feature-requests/1368/

  - Scribus filter (*.sla)

  - Integration of DeepL MT
  https://sourceforge.net/p/omegat/feature-requests/1343/
