@@ -368,6 +368,12 @@ public final class MainWindowMenuHandler {
 
     /** Quits OmegaT */
     public void projectExitMenuItemActionPerformed() {
+         // Bug #902: commit the current entry first
+        // We do it before checking project status, so that it can eventually change it
+        if (Core.getProject().isProjectLoaded()) {
+            Core.getEditor().commitAndLeave();		
+        }
+
         boolean projectModified = false;
         if (Core.getProject().isProjectLoaded()) {
             projectModified = Core.getProject().isProjectModified();
